Basic functionality of config and language modules.

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -47,8 +47,8 @@
             <div id="Commands">
 		<ul>
 		    <li><input type="button" onclick='alert("Not yet!");' value="Open"></li>
-		    <li><input type="button" onclick='start();' value="Start"></li>
-		    <li><input type="button" onclick='alert("Not yet!");' value="Stop"></li>
+		    <li><input id="commandb" type="button" onclick='command();' value="Start"></li>
+		    <li><input type="button" onclick='stopScenario();' value="Stop"></li>
 		</ul>
 	    </div>
         </div>    
