--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -57,7 +57,7 @@
 		    <li><input id="bt_play" type="button" onclick='PlayButton();' value="Start" disabled></li>
 		    <li><input id="bt_stop" type="button" onclick='stopButton();' value="Stop" disabled></li>
 		    <li><input id="bt_quiz" type="button" onclick='quizButton();' value="Quiz" disabled></li>
-		    <li><input id="bt_mode" type="checkbox" onclick='modeButton();' value="Continuous" disabled><label>Continuous Mode</label></li>
+		    <li><input id="bt_mode" type="checkbox" onclick='modeCheckbox();' value="Continuous" disabled><label>Continuous Mode</label></li>
 		    <li><input id="bt_settings" type="button" onclick='settingsButton();' value="Settings" disabled></li>
 		</ul>
 	    </div>
@@ -79,6 +79,10 @@
 	<script type="text/javascript" src="strings/LanguageModule.js"></script>
 	<script type="text/javascript" src="js/utils/FileHandler.js"></script>
 	<script type="text/javascript" src="js/model/ScenarioModel.js"></script>
+	
+	<script type="text/javascript" src="js/app/AppConstants.js"></script>	
+	<script type="text/javascript" src="js/view/ApplicationView.js"></script>	
+	<script type="text/javascript" src="js/controller/ApplicationController.js"></script>
 	<script type="text/javascript" src="js/app/Application.js"></script>
 	
 	<script type="text/javascript" src="lib/jsv/uri/uri.js"></script>
