--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -53,12 +53,12 @@
         <div id="vCommand">
             <div id="Commands">
 		<ul>
-		    <li><input id="bt_open" type="button" onclick='openButton();' value="Open" disabled></li>
-		    <li><input id="bt_play" type="button" onclick='PlayButton();' value="Start" disabled></li>
-		    <li><input id="bt_stop" type="button" onclick='stopButton();' value="Stop" disabled></li>
-		    <li><input id="bt_quiz" type="button" onclick='quizButton();' value="Quiz" disabled></li>
-		    <li><input id="bt_mode" type="checkbox" onclick='modeCheckbox();' value="Continuous" disabled><label>Continuous Mode</label></li>
-		    <li><input id="bt_settings" type="button" onclick='settingsButton();' value="Settings" disabled></li>
+		    <li><input id="bt_open" type="button" onclick='applicationController.openButton();' value="Open" disabled></li>
+		    <li><input id="bt_play" type="button" onclick='applicationController.PlayButton();' value="Start" disabled></li>
+		    <li><input id="bt_stop" type="button" onclick='applicationController.stopButton();' value="Stop" disabled></li>
+		    <li><input id="bt_quiz" type="button" onclick='applicationController.quizButton();' value="Quiz" disabled></li>
+		    <li><input id="bt_mode" type="checkbox" onclick='applicationController.modeCheckbox();' value="Continuous" disabled><label>Continuous Mode</label></li>
+		    <li><input id="bt_settings" type="button" onclick='applicationController.settingsButton();' value="Settings" disabled></li>
 		</ul>
 	    </div>
         </div>    
@@ -76,8 +76,7 @@
 	<script type="text/javascript" src="lib/jquery-ui-1.10.3.custom.min.js"></script>	
 		
 	<script type="text/javascript" src="js/app/ConfigModule.js"></script>
-	<script type="text/javascript" src="strings/LanguageModule.js"></script>
-	<script type="text/javascript" src="js/utils/FileHandler.js"></script>
+	<script type="text/javascript" src="js/model/schema/Schema.js"></script>	
 	<script type="text/javascript" src="js/model/ScenarioModel.js"></script>
 	
 	<script type="text/javascript" src="js/app/AppConstants.js"></script>	
@@ -85,6 +84,11 @@
 	<script type="text/javascript" src="js/controller/ApplicationController.js"></script>
 	<script type="text/javascript" src="js/app/Application.js"></script>
 	
+	<script type="text/javascript" src="strings/LanguageModule.js"></script>
+	
+		
+	<script type="text/javascript" src="js/utils/FileHandler.js"></script>
+		
 	<script type="text/javascript" src="lib/jsv/uri/uri.js"></script>
 	<script type="text/javascript" src="lib/jsv/uri/schemes/urn.js"></script>
 	<script type="text/javascript" src="lib/jsv/jsv.js"></script>
