Scenario Object Normalization

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -50,13 +50,13 @@
         <div id="vMain">
             <div id="vScenario">
                 <div id="vNodes">        
-				  <canvas id="Nodes" style="background-color: white; display: block;">
+				  <canvas id="vNodesCanvas" style="background-color: white; display: block;">
 					Your browser does not support HTML5 Canvas.
 				  </canvas>
                 </div>
 				<div id="vDraw">
 					<div id="progress_bar" class="visible"><img src="img/progress_bar.gif" class="loading_circle" alt="loading" /></div>
-				  <canvas id="MyCanvas" style="background-color: white; border: 2px; border-color: black; display: block;">
+				  <canvas id="vScenarioCanvas" style="background-color: white; border: 2px; border-color: black; display: block;">
 					Your browser does not support HTML5 Canvas.
 				  </canvas>
 				</div>
