Node Images Resize

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -108,6 +108,7 @@
 	<script type="text/javascript" src="js/view/ScenarioView.js"></script>
 	<script type="text/javascript" src="js/controller/ScenarioController.js"></script>
 	<script type="text/javascript" src="js/model/ScenarioContext.js"></script>
+	<script type="text/javascript" src="js/model/ScenarioPlay.js"></script>
 	<script type="text/javascript" src="js/model/ScenarioModel.js"></script>
 	
 	<script type="text/javascript" src="js/view/ApplicationView.js"></script>	
