ScenarioPlay States Managment

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -104,7 +104,8 @@
 	<script type="text/javascript" src="js/utils/FileHandler.js"></script>	
 	<script type="text/javascript" src="js/utils/Utils.js"></script>	
 		
-	<script type="text/javascript" src="js/model/schema/Schema.js"></script>		
+	<script type="text/javascript" src="js/model/schema/Schema.js"></script>
+	<script type="text/javascript" src="js/view/Canvas.js"></script>	
 	<script type="text/javascript" src="js/view/ScenarioView.js"></script>
 	<script type="text/javascript" src="js/controller/ScenarioController.js"></script>
 	<script type="text/javascript" src="js/model/ScenarioContext.js"></script>
