--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -86,7 +86,7 @@
             <div id="Commands">
 		<ul>
 		    <li><input id="bt_open" type="button" onclick='applicationController.openButton();' value="Open" disabled></li>
-		    <li><input id="bt_play" type="button" onclick='scenarioController.playButton();' value="Start" disabled></li>
+		    <li><input id="bt_play" class="play" type="button" onclick='scenarioController.playButton();' value="Start" disabled></li>
 		    <li><input id="bt_stop" type="button" onclick='scenarioController.stopButton();' value="Stop" disabled></li>
 		    <li><input id="bt_quiz" type="button" onclick='applicationController.quizButton();' value="Quiz" disabled></li>
 		    <li><input id="bt_mode" type="checkbox" onclick='scenarioController.modeCheckbox();' checked="true" disabled><label>Continuous Mode</label></li>
