Default Sequence Chagne and Jump to Next Sequence, MCQ start menu.

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -88,7 +88,7 @@
 		    <li><input id="bt_open" type="button" onclick='applicationController.openButton();' value="Open" disabled></li>
 		    <li><input id="bt_play" class="play" type="button" onclick='scenarioController.playButton();' value="Start" disabled></li>
 		    <li><input id="bt_stop" type="button" onclick='scenarioController.stopButton();' value="Stop" disabled></li>
-		    <li><input id="bt_quiz" type="button" onclick='applicationController.quizButton();' value="Quiz" disabled></li>
+		    <li><input id="bt_quiz" type="button" onclick='scenarioController.quizButton();' value="Quiz" disabled></li>
 		    <li><input id="bt_mode" type="checkbox" onclick='scenarioController.modeCheckbox();' checked="true" disabled><label>Continuous Mode</label></li>
 		    <li><input id="bt_data" type="button" onclick='scenarioController.dataButton();' value="Scenario Data" disabled></li>
 		    <li><input id="bt_settings" type="button" onclick='applicationController.settingsButton();' value="Settings" disabled></li>
