MCQ Dialog Advancements on Responsive Design

--- a/Valpopp/WebContent/test/test_config_lang_modules.html
+++ b/Valpopp/WebContent/test/test_config_lang_modules.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<script type="text/javascript" src="lib/jquery-1.10.2.js"></script>
-<link href="css/test.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="../lib/jquery-1.10.2.js"></script>
+<link href="../css/test.css" rel="stylesheet" type="text/css" />
 <title>Test Page</title>
 </head>
 <body>
@@ -72,7 +72,7 @@ function eventLanguageFileLoaded(e){
 }
 
 </script>
-<script type="text/javascript" src="js/app/ConfigModule.js"></script>
-<script type="text/javascript" src="strings/LanguageModule.js"></script>
+<script type="text/javascript" src="../js/app/ConfigModule.js"></script>
+<script type="text/javascript" src="../strings/LanguageModule.js"></script>
 </body>
 </html>
