Scenario Data Dialog

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -78,6 +78,7 @@
     <div id="valpo">
 		<div id="maindialog" ></div>
 		<div id="seconddialog" ></div>  
+		<div id="scenarioData" ></div>
 	   
         <div id="vHeader">
             Valpo Header
