Hide and Show Scenario Comments Section and Resize Scenario Canvas

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -99,7 +99,14 @@
 				</div>
          	</div>     
             <div id="vMessages">
-                Messages
+                <div id="vMessagesHeader">        
+					<a href="#" onClick="scenarioView.hideComments();"><img src="img/hide.jpg"></a>
+                </div>
+				<div id="vMessagesBody">
+				  <canvas id="vScenarioComments" style="background-color: white; border: 1px; border-color: black; display: block;">
+					Your browser does not support HTML5 Canvas.
+				  </canvas>
+				</div>
             </div>
         </div>
         
