Show scenario comments

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -100,7 +100,7 @@
          	</div>     
             <div id="vMessages">
                 <div id="vMessagesHeader">        
-					<a href="#" onClick="scenarioView.hideComments();"><img src="img/hide.jpg"></a>
+					<a href="#" onClick="scenarioView.hideComments();"><img src="img/hide.jpg"> Hide Comments</a>
                 </div>
 				<div id="vMessagesBody">
 				  <canvas id="vScenarioComments" style="background-color: white; border: 1px; border-color: black; display: block;">
