Creation of new Scenario files from the previous version of Valpo

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -82,7 +82,7 @@
 		<div id="scenarioData" ></div>
 	   
         <div id="vHeader">
-            Valpo Header
+            <!-- Scenario Name  -->
         </div>
         <div id="vMain">
             <div id="vScenario">
