Refactor Utils for HtmlBuilder, some comment to the code and Browser and System Detection

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -77,6 +77,7 @@
     
     <!-- Valpo Application -->
     <div id="valpo">
+    	<!-- Dialogs used by the Valpo Application -->
 		<div id="maindialog" ></div>
 		<div id="seconddialog" ></div>  
 		<div id="scenarioData" ></div>
@@ -127,6 +128,8 @@
     <!-- End of Valpo Application -->
 
 
+
+
     
     <!-- the web site footer -->
     <div id="footer">
@@ -160,5 +163,7 @@
 	<script type="text/javascript" src="js/app/Application.js"></script>
 	
 	<script type="text/javascript" src="strings/LanguageModule.js"></script>
+	<!-- End of Valpo++ Script Files -->
+	
 </body>
 </html>
