--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -21,7 +21,7 @@
     <!--
    
     // Set Language
-    configModule.setLang("en");
+    configModule.setLang("es"); // Default "en"
     
     // Set user mode
     configModule.setUserMode("editor");
@@ -114,7 +114,7 @@
          	</div>     
             <div id="vMessages">
                 <div id="vMessagesHeader">        
-					<a href="#" onClick="scenarioView.hideComments();"><img src="img/hide.jpg"> Hide Comments</a>
+					<!-- Here is inserted the header -->
                 </div>
 				<div id="vMessagesBody">
 				  <canvas id="vScenarioComments" style="background-color: white; border: 1px; border-color: black; display: block;">
@@ -126,15 +126,7 @@
         
         <div id="vCommand">
             <div id="Commands">
-		<ul>
-		    <li><input id="bt_open" type="button" onclick='applicationController.openButton();' value="Open" disabled></li>
-		    <li><input id="bt_play" class="play" type="button" onclick='scenarioController.playButton();' value="Start" disabled></li>
-		    <li><input id="bt_quiz" class="inactive" type="button" onclick='scenarioController.quizButton();' value="Quiz" disabled></li>
-		    <li><input id="bt_clear" type="button" onclick='scenarioController.stopButton();' value="Clear" disabled></li>
-		    <li><input id="bt_mode" type="checkbox" onclick='scenarioController.modeCheckbox();' checked disabled><a href="#" onclick='scenarioController.changeMode();' >Continuous Mode</a></li>
-		    <li><input id="bt_data" type="button" onclick='scenarioController.dataButton();' value="Scenario Data" disabled></li>
-		    <li><input id="bt_settings" type="button" onclick='applicationController.settingsButton();' value="Settings" disabled></li>
-		</ul>
+				<!-- Here are inserted the command buttons -->
 	    </div>
         </div>    
     </div>
