Change Language application from Settings

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -21,7 +21,7 @@
     <!--
    
     // Set Language
-    configModule.setLang("es"); // Default "en"
+    //configModule.setLang("es"); // Default "en"
     
     // Set user mode
     configModule.setUserMode("editor");
