Bug Fix: Open Scenario after Error

--- a/Valpopp/WebContent/index.html
+++ b/Valpopp/WebContent/index.html
@@ -8,5 +8,6 @@
 <p style="text-align: center;">It works!</p>
 <p style="text-align: center;"><a href="test/test_config_lang_modules.html">Test Config and Language Modules</a></p>
 <p style="text-align: center;"><a href="valpopp.html">Valpopp Page</a></p>
+<p style="text-align: center;"><a href="translate.html">Translate</a></p>
 </body>
 </html>
