--- a/Valpopp/WebContent/index.html
+++ b/Valpopp/WebContent/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Test Web Server Connection</title>
+<title>Valpo Test Web Server</title>
 </head>
 <body>
-<p style="text-align: center;">It works!</p>
-<p style="text-align: center;"><a href="test/test_config_lang_modules.html">Test Config and Language Modules</a></p>
-<p style="text-align: center;"><a href="valpopp.html">Valpopp Page</a></p>
-<p style="text-align: center;"><a href="translate.html">Translate</a></p>
+<p style="text-align: center;"><a href="valpopp.html">Valpopp App</a></p>
+<p style="text-align: center;"><a href="translate.html">Traducteur</a></p>
 </body>
 </html>
