Show User Score for the Quiz

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -47,7 +47,7 @@
     //configModule.setShowMCQAnswers(false);  // default true
     
     // To use the quiz as a Test, it oblige the student to solve the quiz
-    configModule.setTestModeMCQ(true);  // default false      
+    //configModule.setTestModeMCQ(true);  // default false      
     
     // CHANGING FILE SYSTEMS: SCHEMA FILE, DEFAULT SCENARIO, AND LIST OF SCENARIOS
     // Set schema file
