We add a library for web service comunication

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -183,6 +183,8 @@
 	<script type="text/javascript" src="js/app/Application.js"></script>
 	
 	<script type="text/javascript" src="strings/LanguageModule.js"></script>
+	
+	<script type="text/javascript" src="lib/soapclient.js"></script>
 	<!-- End of Valpo++ Script Files -->
 	
 </body>
