--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -10,6 +10,7 @@
 
 	<!-- Valpo++ Header Settings -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link href="css/valpopp.css" rel="stylesheet" type="text/css" />
 	<link href="css/smoothness/jquery-ui-1.10.3.custom.css" rel="stylesheet">
