Update Translate process CVS to Json

--- a/Valpopp/WebContent/translate.html
+++ b/Valpopp/WebContent/translate.html
@@ -117,7 +117,7 @@
 <div id="download" style="text-align: center;"></div>
 <p>&nbsp;</p>
 	<!-- Valpo++ Script Files -->
-
+	
 	<script type="text/javascript" src="lib/jsv/uri/uri.js"></script>
 	<script type="text/javascript" src="lib/jsv/uri/schemes/urn.js"></script>
 	<script type="text/javascript" src="lib/jsv/jsv.js"></script>
@@ -125,6 +125,8 @@
 	
 	<script type="text/javascript" src="lib/modernizr.js"></script>	
 	<script type="text/javascript" src="lib/jquery-1.10.2.js"></script>	
+	
+	<script type="text/javascript" src="strings/LanguageModule.js"></script>	
 	
 	<script type="text/javascript" src="js/utils/Utils.js"></script>
 	
@@ -139,5 +141,7 @@
 	<script type="text/javascript" src="js/model/ScenarioContext.js"></script>
 
 	<script type="text/javascript" src="js/model/ScenarioModelBuilder.js"></script>	
+	
+	
 </body>
 </html>
