Size of nodes names adapted

--- a/Valpopp/WebContent/valpopp.html
+++ b/Valpopp/WebContent/valpopp.html
@@ -26,10 +26,11 @@
     
     // TYPY OF USER AND LANGUAGE
     // Set Language
-    //configModule.setLang("es"); // Default "en"
+    configModule.setLang("fr"); // Default "en"
     
     // Set type of user mode
-    configModule.setUserMode("advanced");
+    //configModule.setUserMode("advanced");
+    configModule.setUserMode("editor");
    
     // Set student Last Name
     configModule.setStudentLastName("Segovia"); // default Unknown
